client/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-service
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
